// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple.md 1`] = `
[hello](#world)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world)

`;

exports[`title.md 1`] = `
[hello](#world "title")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world "title")

`;
